--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -5,3 +5,12 @@
 	padding: 0;
 	width: 640px;
 }
+
+.full-width {
+	display: block;
+	padding: 10px 15px;
+}
+
+.title {
+	background: $brand-blue;
+}
