--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -6,5 +6,44 @@ html {
 }
 
 table {
-	border-collapse: collapse;
+	border-collapse: collapse !important;
+}
+
+img {
+	display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: $brand-gold;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: $font-h1;
+	margin: 5px 0;
+}
+
+h2 {
+	font-size: $font-h2;
+}
+
+h3 {
+	font-size: $font-h3;
+}
+
+h4 {
+	font-size: $font-h4;
+}
+
+h5 {
+	font-size: $font-h5;
+}
+
+h4 {
+	font-size: $font-h6;
 }
