--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -21,11 +21,12 @@ h5,
 h6 {
 	color: $brand-gold;
 	font-weight: normal;
+	line-height: 1.25em;
 }
 
 h1 {
 	font-size: $font-h1;
-	margin: 5px 0;
+	margin: 0;
 }
 
 h2 {
