--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,7 +12,7 @@
 	  			<table cellspacing="0" cellpadding="0" border="0" align="center" width="100%">
 	  				<tbody>
 	  					<tr>
-	  						<td class="full-width">{% image 'logo.png' alt="UC Santa Cruz" %}</td>
+	  						<td class="full-width"><img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png"></td>
 	  						<td class="full-width title"><h1>Email Title</h1></td>
 	  					</tr>
 	  				</tbody>
