--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-
+  	<!-- LOGO AND TITLE -->
 	  <table cellspacing="0" cellpadding="0" border="0" align="center">
 	  	<tbody>
 	  	<tr>
@@ -21,7 +21,18 @@
 	  	</tr>
 	  	</tbody>
 	  </table>
-
+	  <!-- END LOGO AND TITLE -->
+	  <!-- MAIN PHOTO -->
+	  <table cellspacing="0" cellpadding="0" border="0" align="center">
+	  	<tbody>
+	  	<tr>
+	  		<td class="main" width="640" class="mWidth">
+	  		   <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" class="mWidth" width="640" height="325">
+	  		</td>
+	  	</tr>
+	  	</tbody>
+	  </table>
+	  <!-- END MAIN PHOTO -->
   </body>
 
 </html>
