--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,7 +9,7 @@
 	  	<tbody>
 	  	<tr>
 	  		<td class="main" width="640" class="mWidth">
-	  			<table cellspacing="0" cellpadding="0" border="0" align="center" width="100%">
+	  			<table cellspacing="0" cellpadding="0" border="0" align="center" width="640">
 	  				<tbody>
 	  					<tr>
 	  						<td class="full-width"><img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png"></td>
@@ -23,7 +23,7 @@
 	  </table>
 	  <!-- END LOGO AND TITLE -->
 	  <!-- MAIN PHOTO -->
-	  <table cellspacing="0" cellpadding="0" border="0" align="center">
+	  <table cellspacing="0" cellpadding="0" border="0" align="center" width="640">
 	  	<tbody>
 	  	<tr>
 	  		<td class="main" width="640" class="mWidth">
