--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -7,10 +7,11 @@
 }
 
 .full-width {
-	display: block;
-	padding: 10px 15px;
+	padding: 0;
 }
 
 .title {
 	background: $brand-blue;
+	padding: 10px 15px;
+	width: 640px;
 }
