--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -3,6 +3,7 @@ html {
 	font-family: $font-sans;
 	margin: 10px 0;
 	padding: 0;
+	color: #444;
 }
 
 table, td {
@@ -11,42 +12,6 @@ table, td {
 
 img {
 	display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	color: $brand-gold;
-	font-weight: normal;
-	line-height: 1.25em;
-}
-
-h1 {
-	font-size: $font-h1;
-	margin: 0;
-}
-
-h2 {
-	font-size: $font-h2;
-}
-
-h3 {
-	font-size: $font-h3;
-}
-
-h4 {
-	font-size: $font-h4;
-}
-
-h5 {
-	font-size: $font-h5;
-}
-
-h4 {
-	font-size: $font-h6;
 }
 
 .logo {
