--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -1,4 +1,34 @@
-.header {
-	display: block;
-	padding: 0 0 0 15px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: normal;
+	line-height: 1.25em;
+}
+
+h1 {
+	font-size: $font-h1;
+	margin: 0;
+}
+
+h2 {
+	font-size: $font-h2;
+}
+
+h3 {
+	font-size: $font-h3;
+}
+
+h4 {
+	font-size: $font-h4;
+}
+
+h5 {
+	font-size: $font-h5;
+}
+
+h4 {
+	font-size: $font-h6;
 }
