--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -26,6 +26,22 @@
         </td>
       </tr>
       <!-- END INTRO PHOTO -->
+      <!-- CONTENT -->
+      <tr>
+        <td class="content">
+          <table align="center" cellpadding="0" cellspacing="0" width="100%">
+            <tbody>
+              <tr>
+                <td>
+                  <h2>Hello World</h2>
+                  <p>This world is awesome</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      <!-- END CONTENT -->
   	</table>
   </body>
 
