Top Story, Also Featured

--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -17,3 +17,13 @@ img {
 .logo {
 	padding: 15px;
 }
+
+a,
+a:active {
+	color: $brand-blue;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
