--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -32,3 +32,11 @@ h5 {
 h4 {
 	font-size: $font-h6;
 }
+
+.section-title h2 {
+	margin: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	padding-left: 15px
+	padding-right: 15px
+}
