--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -19,29 +19,64 @@
         </td>
       </tr>
       <!-- END EMAIL TITLE -->
-      <!-- INTRO PHOTO -->
+      <!-- INTRO STORY -->
       <tr>
         <td class="full-width">
           <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" class="mWidth" width="640" height="325">
         </td>
       </tr>
-      <!-- END INTRO PHOTO -->
-      <!-- CONTENT -->
       <tr>
         <td class="content">
-          <table align="center" cellpadding="0" cellspacing="0" width="100%">
-            <tbody>
-              <tr>
-                <td>
-                  <h2>Hello World</h2>
-                  <p>This world is awesome</p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <h2><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
         </td>
       </tr>
-      <!-- END CONTENT -->
+      <!-- END INTRO STORY -->
+      <!-- ALSO FEATURED -->
+      <tr>
+        <td class="full-width section-title">
+          <h2>ALSO FEATURED</h2>
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content">
+        <!-- LEFT COLUMN -->
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="45%">
+           <tbody>
+             <tr>
+               <td>
+                 <img src="http://placehold.it/300x150" width="300" height="150" alt="Placeholder image">
+               </td>
+             </tr>
+             <tr>
+               <td>
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+               </td>
+             </tr>
+           </tbody>
+         </table>
+        <!-- LEFT COLUMN -->
+        <!-- RIGHT COLUMN -->
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="45%">
+           <tbody>
+             <tr>
+               <td>
+                 <img src="http://placehold.it/300x150" width="300" height="150" alt="Placeholder image">
+               </td>
+             </tr>
+             <tr>
+               <td>
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+               </td>
+             </tr>
+           </tbody>
+         </table>
+        <!-- RIGHT COLUMN -->
+        </td>
+      </tr>
+      <!-- END ALSO FEATURED -->
   	</table>
   </body>
 
