Adding more rows

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -45,7 +45,7 @@
            <tbody>
              <tr>
                <td>
-                 <img src="http://placehold.it/300x150" width="300" height="150" alt="Placeholder image">
+                 <img src="http://placehold.it/295x200" width="295" height="200" alt="Placeholder image">
                </td>
              </tr>
              <tr>
@@ -62,7 +62,7 @@
            <tbody>
              <tr>
                <td>
-                 <img src="http://placehold.it/300x150" width="300" height="150" alt="Placeholder image">
+                 <img src="http://placehold.it/295x200" width="295" height="200" alt="Placeholder image">
                </td>
              </tr>
              <tr>
@@ -77,6 +77,116 @@
         </td>
       </tr>
       <!-- END ALSO FEATURED -->
+      <!-- FULL WIDTH -->
+      <tr>
+        <td class="full-width section-title">
+          <h2>FULL WIDTH</h2>
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content">
+        <img src="http://placehold.it/610x250" width="610" height="250" alt="Placeholder image">
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content">
+          <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
+        </td>
+      </tr>
+      <!-- END FULL WIDTH -->
+      <!-- ROW 70/30 WIDTH -->
+      <tr>
+        <td class="full-width section-title">
+          <h2>70/30 WIDTH</h2>
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content">
+        <!-- 70 COLUMN -->
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="60%">
+           <tbody>
+             <tr>
+               <td>
+                 <img src="http://placehold.it/380x200" width="380" height="200" alt="Placeholder image">
+               </td>
+             </tr>
+             <tr>
+               <td>
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+               </td>
+             </tr>
+           </tbody>
+         </table>
+        <!-- END 70 COLUMN -->
+        <!-- 30 COLUMN -->
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="30%">
+           <tbody>
+             <tr>
+               <td>
+                 <img src="http://placehold.it/210x150" width="210" height="200" alt="Placeholder image">
+               </td>
+             </tr>
+             <tr>
+               <td>
+                 <h3><a href="#">Neque porro quisquam est qui</a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+               </td>
+             </tr>
+           </tbody>
+         </table>
+        <!-- END 30 COLUMN -->
+        </td>
+      </tr>
+      <!-- END ROW 70/30 WIDTH -->
+      
+       <!-- ROW 30/70 WIDTH -->
+      <tr>
+        <td class="full-width section-title">
+          <h2>30/30 WIDTH</h2>
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content">
+        <!-- 30 COLUMN -->
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="35%">
+           <tbody>
+             <tr>
+               <td>
+                 <img src="http://placehold.it/210x200" width="210" height="200" alt="Placeholder image">
+               </td>
+             </tr>
+             <tr>
+               <td>
+                 <h3><a href="#">Neque porro quisquam est qui</a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+               </td>
+             </tr>
+           </tbody>
+         </table>
+        <!-- END 30 COLUMN -->
+        <!-- 70 COLUMN -->
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="60%">
+           <tbody>
+             <tr>
+               <td>
+                 <img src="http://placehold.it/380x200" width="380" height="200" alt="Placeholder image">
+               </td>
+             </tr>
+             <tr>
+               <td>
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+               </td>
+             </tr>
+           </tbody>
+         </table>
+        <!-- END 70 COLUMN -->
+        </td>
+      </tr>
+      <!-- END ROW 70/30 WIDTH -->
+
   	</table>
   </body>
 
