--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -37,6 +37,6 @@ h4 {
 	margin: 0;
 	padding-top: 0;
 	padding-bottom: 0;
-	padding-left: 15px
-	padding-right: 15px
+	padding-left: 15px;
+	padding-right: 15px;
 }
