--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -185,7 +185,74 @@
         <!-- END 70 COLUMN -->
         </td>
       </tr>
-      <!-- END ROW 70/30 WIDTH -->
+      <!-- END ROW 30/70 WIDTH -->
+
+      <!-- TWO COLUMNS -->
+      <tr>
+        <td class="full-width section-title">
+          <h2>TWO COLUMNS</h2>
+        </td>
+      </tr>
+      <tr>
+        <td class="section-content">
+        <!-- LEFT COLUMN -->
+        <table align="left" border="0" cellpadding="0" cellspacing="0" width="375">
+          <tbody>
+            <tr>
+              <td class="left-column">
+                <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
+              </td>
+            </tr>
+            <tr>
+               <td class="left-column">
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+               </td>
+             </tr>
+             <tr>
+              <td class="left-column sub-section-title">
+                <h2>SECTION TITLE</h2>
+              </td>
+            </tr>
+             <tr>
+              <td class="left-column">
+                <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
+              </td>
+            </tr>
+            <tr>
+               <td class="left-column">
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
+               </td>
+             </tr>
+          </tbody>
+        </table>
+        <!-- END LEFT COLUMN -->
+        <!-- RIGHT COLUMN -->
+        <table align="right" border="0" cellpadding="0" cellspacing="0" width="215">
+          <tbody>
+            <tr>
+              <td class="right-column">
+                <h3>FEATURED EVENT</h3>
+                <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image">
+                <strong>Neque porro quisquam est qui dolorem ipsum quia</strong>
+                <strong>Date: dd/mm/yyyy</strong>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                  <tr>
+                    <td class="separator">
+                      <a href="http://events.ucsc.edu">» Events Calendar</a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- END RIGHT COLUMN -->
+        </td>
+      </tr>
+      <!-- END TWO COLUMNS -->
 
   	</table>
   </body>
