--- a/source/_assets/stylesheets/_base.scss
+++ b/source/_assets/stylesheets/_base.scss
@@ -1,9 +1,10 @@
 body,
 html {
+	color: #444;
 	font-family: $font-sans;
+	line-height: 20px;
 	margin: 10px 0;
 	padding: 0;
-	color: #444;
 }
 
 table, td {
