--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -40,3 +40,13 @@ h4 {
 	padding-left: 15px;
 	padding-right: 15px;
 }
+
+.sub-section-title h2 {
+	margin: 0;
+	padding: 0;
+}
+
+.right-column-title h3 {
+	margin: 0;
+	padding: 0;
+}
