--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -33,20 +33,17 @@ h4 {
 	font-size: $font-h6;
 }
 
-.section-title h2 {
+.section-title {
 	margin: 0;
-	padding-top: 0;
-	padding-bottom: 0;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding: 0 15px;
 }
 
-.sub-section-title h2 {
+.sub-section-title {
 	margin: 0;
 	padding: 0;
 }
 
-.right-column-title h3 {
+.right-column-title {
 	margin: 0;
 	padding: 0;
 }
