--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -231,12 +231,13 @@
         <!-- RIGHT COLUMN -->
         <table align="right" border="0" cellpadding="0" cellspacing="0" width="215">
           <tbody>
+            <!-- Featured events -->
             <tr>
               <td class="right-column">
                 <h3>FEATURED EVENT</h3>
                 <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image">
-                <strong>Neque porro quisquam est qui dolorem ipsum quia</strong>
-                <strong>Date: dd/mm/yyyy</strong>
+                <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+                <p><strong>Date:</strong> dd/mm/yyyy</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                 <table border="0" cellspacing="0" cellpadding="0" width="100%">
                   <tr>
@@ -247,6 +248,37 @@
                 </table>
               </td>
             </tr>
+            <!-- End Featured events -->
+
+            <!-- Campus Events -->
+            <tr>
+              <td class="right-column">
+                <h3>CAMPUS EVENTS</h3>
+                <table align="center" cellspacing="0" cellpadding="0" width="100%">
+                  <tr>
+                    <td>
+                      <strong><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></strong>
+                      <p>Date: mm/dd/yyyy<p>
+                    </td>
+                  </tr>
+                   <tr>
+                    <td>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+                    </td>
+                  </tr>
+                </table>
+
+
+                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                  <tr>
+                    <td class="separator">
+                      <a href="http://events.ucsc.edu">» Events Calendar</a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- End campus events -->
           </tbody>
         </table>
         <!-- END RIGHT COLUMN -->
