--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -14,24 +14,6 @@
 	padding: 10px 20px;
 }
 
-.title {
-	background: $brand-blue;
-	color: $brand-gold;
-	padding: 10px 15px;
-	width: 640px;
-}
-
-.section-title {
-	border-bottom: 2px solid $brand-gold;
-	color: $brand-gold;
-}
-
-.sub-section-title {
-	//border-bottom: 2px solid $brand-gold;
-	color: $brand-gold;
-}
-
-
 .section-content {
 	padding: 0 15px;
 }
@@ -42,16 +24,16 @@
 }
 
 .section-content h3 {
-	padding: 10px 0;
+	padding: 0;
 }
 
 .section-content p {
-	padding: 0 0 18px;
+	padding: 5px 0 10px;
 }
 
 .section-content .left-column {
 	border-right: 1px solid $brand-gold;
-	padding: 0 10px 0 0;
+	padding-right: 10px;
 }
 
 .section-content .right-column {
@@ -70,12 +52,7 @@
 	padding: 10px 0 5px;
 }
 
-.section-content .right-column p {
-	display: block;
-	padding: 0 0 10px;
-}
-
-.right-column .separator {
+.separator {
 	border-bottom: 1px solid $brand-blue;
 	font-weight: 500;
 	padding: 10px 0 5px;
