--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -33,17 +33,22 @@ h4 {
 	font-size: $font-h6;
 }
 
+.title {
+	background: $brand-blue;
+	color: $brand-gold;
+	padding: 10px 15px;
+	width: 640px;
+}
+
 .section-title {
+	border-bottom: 2px solid $brand-gold;
+	color: $brand-gold;
 	margin: 0;
-	padding: 0 15px;
+	padding: 15px 15px 5px;
 }
 
 .sub-section-title {
+	color: $brand-gold;
 	margin: 0;
-	padding: 0;
-}
-
-.right-column-title {
-	margin: 0;
-	padding: 0;
+	padding: 15px 0 0;
 }
