--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -34,7 +34,7 @@
       <!-- END INTRO STORY -->
       <!-- ALSO FEATURED -->
       <tr>
-        <td class="full-width section-title">
+        <td class="section-title">
           <h2>ALSO FEATURED</h2>
         </td>
       </tr>
@@ -51,6 +51,10 @@
              <tr>
                <td>
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+               </td>
+             </tr>
+             <tr>
+               <td>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -68,6 +72,10 @@
              <tr>
                <td>
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+               </td>
+             </tr>
+             <tr>
+               <td>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -79,7 +87,7 @@
       <!-- END ALSO FEATURED -->
       <!-- FULL WIDTH -->
       <tr>
-        <td class="full-width section-title">
+        <td class="section-title">
           <h2>FULL WIDTH</h2>
         </td>
       </tr>
@@ -91,13 +99,17 @@
       <tr>
         <td class="section-content">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h3>
+        </td>
+      </tr>
+       <tr>
+        <td class="section-content">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
         </td>
       </tr>
       <!-- END FULL WIDTH -->
       <!-- ROW 70/30 WIDTH -->
       <tr>
-        <td class="full-width section-title">
+        <td class="section-title">
           <h2>70/30 WIDTH</h2>
         </td>
       </tr>
@@ -114,6 +126,10 @@
              <tr>
                <td>
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+               </td>
+             </tr>
+              <tr>
+               <td>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -131,6 +147,10 @@
              <tr>
                <td>
                  <h3><a href="#">Neque porro quisquam est qui</a></h3>
+               </td>
+             </tr>
+             <tr>
+               <td>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                </td>
              </tr>
@@ -143,8 +163,8 @@
       
        <!-- ROW 30/70 WIDTH -->
       <tr>
-        <td class="full-width section-title">
-          <h2>30/30 WIDTH</h2>
+        <td class="section-title">
+          <h2>30/70 WIDTH</h2>
         </td>
       </tr>
       <tr>
@@ -160,6 +180,10 @@
              <tr>
                <td>
                  <h3><a href="#">Neque porro quisquam est qui</a></h3>
+               </td>
+             </tr>
+             <tr>
+               <td>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                </td>
              </tr>
@@ -177,6 +201,10 @@
              <tr>
                <td>
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+               </td>
+             </tr>
+             <tr>
+               <td>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -189,7 +217,7 @@
 
       <!-- TWO COLUMNS -->
       <tr>
-        <td class="full-width section-title">
+        <td class="section-title">
           <h2>TWO COLUMNS</h2>
         </td>
       </tr>
@@ -203,9 +231,13 @@
                 <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
               </td>
             </tr>
-            <tr>
+             <tr>
                <td class="left-column">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+               </td>
+             </tr>
+            <tr>
+               <td class="left-column">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -221,7 +253,11 @@
             </tr>
             <tr>
                <td class="left-column">
-                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+               </td>
+             </tr>
+            <tr>
+               <td class="left-column">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -233,11 +269,19 @@
           <tbody>
             <!-- Featured events -->
             <tr>
-              <td class="right-column">
+              <td>
                 <h3>FEATURED EVENT</h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
-                <p><strong>Date:</strong> dd/mm/yyyy</p>
+                <strong>Date:</strong> dd/mm/yyyy
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                 <table border="0" cellspacing="0" cellpadding="0" width="100%">
                   <tr>
@@ -249,36 +293,6 @@
               </td>
             </tr>
             <!-- End Featured events -->
-
-            <!-- Campus Events -->
-            <tr>
-              <td class="right-column">
-                <h3>CAMPUS EVENTS</h3>
-                <table align="center" cellspacing="0" cellpadding="0" width="100%">
-                  <tr>
-                    <td>
-                      <strong><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></strong>
-                      <p>Date: mm/dd/yyyy<p>
-                    </td>
-                  </tr>
-                   <tr>
-                    <td>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
-                    </td>
-                  </tr>
-                </table>
-
-
-                <table border="0" cellspacing="0" cellpadding="0" width="100%">
-                  <tr>
-                    <td class="separator">
-                      <a href="http://events.ucsc.edu">» Events Calendar</a>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <!-- End campus events -->
           </tbody>
         </table>
         <!-- END RIGHT COLUMN -->
