--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -269,7 +269,7 @@
           <tbody>
             <!-- Featured events -->
             <tr>
-              <td>
+              <td class="spacing-top right-title">
                 <h3>FEATURED EVENT</h3>
               </td>
             </tr>
@@ -277,12 +277,80 @@
               <td>
                 <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+              </td>
+            </tr>
+            <tr>
+              <td class="spacing">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
               <td>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
+                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                  <tr>
+                    <td class="separator">
+                      <a href="http://events.ucsc.edu">» Events Calendar</a>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <!-- End Featured events -->
+
+            <!-- Campus events -->
+            <tr>
+              <td class="spacing-top right-title">
+                <h3>Campus Events</h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Date:</strong> dd/mm/yyyy
+              </td>
+            </tr>
+            <tr>
+              <td class="spacing-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Date:</strong> dd/mm/yyyy
+              </td>
+            </tr>
+            <tr>
+              <td class="spacing-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <strong>Date:</strong> dd/mm/yyyy
+              </td>
+            </tr>
+            <tr>
+              <td class="spacing-bottom">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
                 <table border="0" cellspacing="0" cellpadding="0" width="100%">
                   <tr>
                     <td class="separator">
