added spacing date right column

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -310,7 +310,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="spacing">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
@@ -325,7 +325,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="spacing">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
@@ -340,7 +340,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="spacing">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
