Adding mobile styles

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -7,7 +7,7 @@
   	<table align="center" border="0" cellpadding="0" cellspacing="0" width="640" bgcolor="#f2f5f8" class="main">
       <!-- LOGO -->
   		<tr>
-  			<td class="logo">
+  			<td class="logo mWidth">
 						<img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/logo.png" alt="University of California, UC Santa Cruz">
   			</td>
   		</tr>
@@ -21,12 +21,12 @@
       <!-- END EMAIL TITLE -->
       <!-- INTRO STORY -->
       <tr>
-        <td class="full-width">
-          <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" class="mWidth" width="640" height="325">
+        <td class="full-width mWidth">
+          <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" class="mWidth" width="640" height="325" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td class="content">
+        <td class="content mWidth">
           <h2><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
         </td>
@@ -34,7 +34,7 @@
       <!-- END INTRO STORY -->
       <!-- ALSO FEATURED -->
       <tr>
-        <td class="section-title">
+        <td class="section-title mWidth">
           <h2>ALSO FEATURED</h2>
         </td>
       </tr>
@@ -44,17 +44,17 @@
          <table align="left" border="0" cellpadding="0" cellspacing="0" width="45%">
            <tbody>
              <tr>
-               <td>
-                 <img src="http://placehold.it/295x200" width="295" height="200" alt="Placeholder image">
+               <td class="mWidth">
+                 <img src="http://placehold.it/295x200" width="295" height="200" alt="Placeholder image" class="mFullImage">
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -65,17 +65,17 @@
          <table align="right" border="0" cellpadding="0" cellspacing="0" width="45%">
            <tbody>
              <tr>
-               <td>
-                 <img src="http://placehold.it/295x200" width="295" height="200" alt="Placeholder image">
+               <td class="mWidth">
+                 <img src="http://placehold.it/295x200" width="295" height="200" alt="Placeholder image" class="mFullImage">
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
