--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="{% asset_path main.css %}" />
   <link rel="stylesheet" type="text/css" media="screen" href="{% asset_path mobile.css %}" />
   <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/mobile.css" /> 
-  <!-- <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/main.css" /> -->
+  <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/main.css" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 </head>
