--- a/source/_assets/stylesheets/_mobile-style.scss
+++ b/source/_assets/stylesheets/_mobile-style.scss
@@ -1,11 +1,11 @@
-@media only screen and (max-device-width: 479px) {
+@media only screen and (max-device-width: 480px) {
  
  img[class="mFullImage"] { 
  	width:100%!important; 
  	height:auto!important; 
  }
 
- *[class~="mWidth"] { 
+ td[class~="mWidth"] { 
  	width:100%!important; 
  }
 
