--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -22,7 +22,7 @@
       <!-- INTRO STORY -->
       <tr>
         <td class="full-width mWidth">
-          <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" class="mWidth" width="640" height="325" class="mFullImage">
+          <img src="http://luckyluke007.github.io/ucsc-email-templates/build/assets/photo-640x325.jpg" alt="Banana Slug in a suit" width="640" height="325" class="mFullImage">
         </td>
       </tr>
       <tr>
@@ -41,7 +41,7 @@
       <tr>
         <td class="section-content">
         <!-- LEFT COLUMN -->
-         <table align="left" border="0" cellpadding="0" cellspacing="0" width="45%">
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="288" class="mWidth">
            <tbody>
              <tr>
                <td class="mWidth">
@@ -62,7 +62,7 @@
          </table>
         <!-- LEFT COLUMN -->
         <!-- RIGHT COLUMN -->
-         <table align="right" border="0" cellpadding="0" cellspacing="0" width="45%">
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="288" class="mWidth">
            <tbody>
              <tr>
                <td class="mWidth">
