font-size increase

--- a/source/_assets/stylesheets/_typography.scss
+++ b/source/_assets/stylesheets/_typography.scss
@@ -1,3 +1,8 @@
+html,
+body {
+	font-size: 14px;
+}
+
 h1,
 h2,
 h3,
@@ -32,6 +37,10 @@ h5 {
 
 h4 {
 	font-size: $font-h6;
+}
+
+p {
+	font-size: 15px;;
 }
 
 .title {
