--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -14,14 +14,18 @@
   
   <style type="text/css" rel="stylesheet">
     @media only screen and (max-device-width: 599px) {
-      .mFullImage {
-        width: 100% !important;
-        height: auto !important; 
-      }
+ 
+     img .mFullImage { 
+      width:100%!important; 
+      height:auto!important; 
+     }
 
-      .mWidth {
-        width: 100% !important; } 
-      }
+     td .mWidth { 
+      width:100%!important; 
+      font-size: 16px !important;
+     }
+
+    }
   </style>
   <link rel="stylesheet" type="text/css" media="screen" href="http://luckyluke007.github.io/ucsc-email-templates/build/assets/main.css" />
  
