--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -41,7 +41,7 @@
       <tr>
         <td class="section-content">
         <!-- LEFT COLUMN -->
-         <table align="left" border="0" cellpadding="0" cellspacing="0" width="288" class="mWidth">
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="295" class="mWidth">
            <tbody>
              <tr>
                <td class="mWidth">
@@ -62,7 +62,7 @@
          </table>
         <!-- LEFT COLUMN -->
         <!-- RIGHT COLUMN -->
-         <table align="right" border="0" cellpadding="0" cellspacing="0" width="288" class="mWidth">
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="295" class="mWidth">
            <tbody>
              <tr>
                <td class="mWidth">
@@ -93,43 +93,43 @@
       </tr>
       <tr>
         <td class="section-content">
-        <img src="http://placehold.it/610x250" width="610" height="250" alt="Placeholder image">
+        <img src="http://placehold.it/610x250" width="610" height="250" alt="Placeholder image" class="mFullImage">
         </td>
       </tr>
       <tr>
-        <td class="section-content">
+        <td class="section-content mWidth">
           <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</a></h3>
         </td>
       </tr>
        <tr>
-        <td class="section-content">
+        <td class="section-content mWidth">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>  
         </td>
       </tr>
       <!-- END FULL WIDTH -->
       <!-- ROW 70/30 WIDTH -->
       <tr>
-        <td class="section-title">
+        <td class="section-title mWidth">
           <h2>70/30 WIDTH</h2>
         </td>
       </tr>
       <tr>
         <td class="section-content">
         <!-- 70 COLUMN -->
-         <table align="left" border="0" cellpadding="0" cellspacing="0" width="60%">
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="60%" class="mWidth">
            <tbody>
              <tr>
-               <td>
-                 <img src="http://placehold.it/380x200" width="380" height="200" alt="Placeholder image">
+               <td class="mWidth">
+                 <img src="http://placehold.it/380x200" width="380" height="200" alt="Placeholder image" class="mFullImage">
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
                </td>
              </tr>
               <tr>
-               <td>
+               <td class="mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -137,20 +137,20 @@
          </table>
         <!-- END 70 COLUMN -->
         <!-- 30 COLUMN -->
-         <table align="right" border="0" cellpadding="0" cellspacing="0" width="30%">
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="30%" class="mWidth">
            <tbody>
              <tr>
-               <td>
-                 <img src="http://placehold.it/210x150" width="210" height="200" alt="Placeholder image">
+               <td class="mWidth">
+                 <img src="http://placehold.it/210x150" width="210" height="200" alt="Placeholder image" class="mFullImage">
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <h3><a href="#">Neque porro quisquam est qui</a></h3>
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                </td>
              </tr>
@@ -163,27 +163,27 @@
       
        <!-- ROW 30/70 WIDTH -->
       <tr>
-        <td class="section-title">
+        <td class="section-title mWidth">
           <h2>30/70 WIDTH</h2>
         </td>
       </tr>
       <tr>
-        <td class="section-content">
+        <td class="section-content mWidth">
         <!-- 30 COLUMN -->
-         <table align="left" border="0" cellpadding="0" cellspacing="0" width="35%">
+         <table align="left" border="0" cellpadding="0" cellspacing="0" width="35%" class="mWidth">
            <tbody>
              <tr>
-               <td>
-                 <img src="http://placehold.it/210x200" width="210" height="200" alt="Placeholder image">
+               <td class="mWidth">
+                 <img src="http://placehold.it/210x200" width="210" height="200" alt="Placeholder image" class="mFullImage">
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <h3><a href="#">Neque porro quisquam est qui</a></h3>
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                </td>
              </tr>
@@ -191,20 +191,20 @@
          </table>
         <!-- END 30 COLUMN -->
         <!-- 70 COLUMN -->
-         <table align="right" border="0" cellpadding="0" cellspacing="0" width="60%">
+         <table align="right" border="0" cellpadding="0" cellspacing="0" width="60%" class="mWidth">
            <tbody>
              <tr>
-               <td>
-                 <img src="http://placehold.it/380x200" width="380" height="200" alt="Placeholder image">
+               <td class="mWidth">
+                 <img src="http://placehold.it/380x200" width="380" height="200" alt="Placeholder image" class="mFullImage">
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
                </td>
              </tr>
              <tr>
-               <td>
+               <td class="mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
