--- a/source/_assets/stylesheets/_mobile-style.scss
+++ b/source/_assets/stylesheets/_mobile-style.scss
@@ -1,11 +1,11 @@
 @media only screen and (max-device-width: 599px) {
- 
- img .mFullImage { 
+ /* Images */ 
+ .mFullImage { 
  	width:100%!important; 
  	height:auto!important; 
  }
-
- td .mWidth { 
+ /* TD or table */ 
+ .mWidth { 
  	width:100%!important; 
  	font-size: 16px !important;
  }
