--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -222,42 +222,42 @@
         </td>
       </tr>
       <tr>
-        <td class="section-content">
+        <td class="section-content mWidth">
         <!-- LEFT COLUMN -->
-        <table align="left" border="0" cellpadding="0" cellspacing="0" width="375">
+        <table align="left" border="0" cellpadding="0" cellspacing="0" width="375" class="mWidth">
           <tbody>
             <tr>
-              <td class="left-column">
+              <td class="left-column mWidth">
                 <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
               </td>
             </tr>
              <tr>
-               <td class="left-column">
+               <td class="left-column mWidth">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia </a></h3>
                </td>
              </tr>
             <tr>
-               <td class="left-column">
+               <td class="left-column mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
              <tr>
-              <td class="left-column sub-section-title">
+              <td class="left-column sub-section-title mWidth">
                 <h2>SECTION TITLE</h2>
               </td>
             </tr>
              <tr>
-              <td class="left-column">
+              <td class="left-column mWidth">
                 <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
               </td>
             </tr>
             <tr>
-               <td class="left-column">
+               <td class="left-column mWidth">
                  <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
                </td>
              </tr>
             <tr>
-               <td class="left-column">
+               <td class="left-column mWidth">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat elit ac felis faucibus, ac ullamcorper diam semper. Cras non sapien sapien.</p>
                </td>
              </tr>
@@ -265,31 +265,31 @@
         </table>
         <!-- END LEFT COLUMN -->
         <!-- RIGHT COLUMN -->
-        <table align="right" border="0" cellpadding="0" cellspacing="0" width="215">
+        <table align="right" border="0" cellpadding="0" cellspacing="0" width="215" class="mWidth">
           <tbody>
             <!-- Featured events -->
             <tr>
-              <td class="spacing-top right-title">
+              <td class="spacing-top right-title mWidth">
                 <h3>FEATURED EVENT</h3>
               </td>
             </tr>
             <tr>
               <td>
-                <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image">
+                <img src="http://placehold.it/215x75" width="215" height="75" alt="Placeholder image" class="mFullImage">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing">
+              <td class="spacing mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="mWidth">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
                 <table border="0" cellspacing="0" cellpadding="0" width="100%">
                   <tr>
-                    <td class="separator">
+                    <td class="separator mWidth">
                       <a href="http://events.ucsc.edu">» Events Calendar</a>
                     </td>
                   </tr>
@@ -300,67 +300,67 @@
 
             <!-- Campus events -->
             <tr>
-              <td class="spacing-top right-title">
+              <td class="spacing-top right-title mWidth">
                 <h3>Campus Events</h3>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="mWidth">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing">
+              <td class="spacing mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="spacing-bottom">
+              <td class="spacing-bottom mWidth">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="mWidth">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing">
+              <td class="spacing mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="spacing-bottom">
+              <td class="spacing-bottom mWidth">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="mWidth">
                 <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
               </td>
             </tr>
             <tr>
-              <td class="spacing">
+              <td class="spacing mWidth">
                 <strong>Date:</strong> dd/mm/yyyy
               </td>
             </tr>
             <tr>
-              <td class="spacing-bottom">
+              <td class="spacing-bottom mWidth">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </td>
             </tr>
             <tr>
-              <td>
-                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+              <td class="mWidth">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
                   <tr>
-                    <td class="separator">
+                    <td class="separator mWidth">
                       <a href="http://events.ucsc.edu">» Events Calendar</a>
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
-            <!-- End Featured events -->
+            <!-- End Campus events -->
           </tbody>
         </table>
         <!-- END RIGHT COLUMN -->
