changing background color

--- a/source/_assets/stylesheets/_variables.scss
+++ b/source/_assets/stylesheets/_variables.scss
@@ -20,7 +20,7 @@ $stand-size: 13px;
 $brand-blue: #00458c;
 $brand-gold: #ffc500;
 
-$background: #f2f5f8;
+$background: #f2f6fa;
 
 $dark-gray: #333;
 $light-gray: #bcc1c2;
