adding top border

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -32,6 +32,7 @@
 }
 
 .section-content .left-column {
+	border-top: 1px solid $brand-blue;
 	border-right: 1px solid $brand-gold;
 	padding-right: 10px;
 }
