--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -41,7 +41,6 @@
 }
 
 .spacing-top {
-	border-top: 1px solid $brand-blue;
 	padding: 10px 0 5px;
 }
 
@@ -59,9 +58,15 @@
 	padding: 10px 0 5px;
 }
 
+// Borders
 .separator {
 	border-bottom: 1px solid $brand-blue;
 	font-weight: 500;
 	padding: 10px 0 5px;
 	text-align: right;
 }
+
+.border-top {
+	border-top: 1px solid $brand-blue;
+}
+
