--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -228,7 +228,7 @@
           <tbody>
             <tr>
               <td class="left-column mWidth">
-                <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
+                <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image" class="mFullImage">
               </td>
             </tr>
              <tr>
@@ -248,7 +248,7 @@
             </tr>
              <tr>
               <td class="left-column mWidth">
-                <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image">
+                <img src="http://placehold.it/375x200" width="375" height="200" alt="Placeholder image" class="mFullImage">
               </td>
             </tr>
             <tr>
@@ -272,6 +272,25 @@
                       </td>
                    </tr>
                  </table>
+               </td>
+             </tr>
+             <tr>
+               <td class="spacing-top border-top left-column mWidth">
+                 <img src="http://placehold.it/195x195" width="195" height="195" alt="Placeholder image" align="left" class="mFullImage">
+                 <table align="right" border="0" cellpadding="0" cellspacing="0" class="mWidth" width="160">
+                   <tr>
+                     <td class="mWidth">
+                      <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                      </td>
+                   </tr>
+                 </table>
+               </td>
+             </tr>
+             <tr>
+               <td class="spacing-top border-top left-column mWidth">
+                 <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                </td>
              </tr>
           </tbody>
@@ -300,7 +319,7 @@
             <tr>
               <td class="mWidth">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper mollis libero, eu sollicitudin lectus volutpat vel.</p>
-                <table border="0" cellspacing="0" cellpadding="0" width="100%">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
                   <tr>
                     <td class="separator mWidth">
                       <a href="http://events.ucsc.edu">» Events Calendar</a>
@@ -374,6 +393,26 @@
               </td>
             </tr>
             <!-- End Campus events -->
+            <!-- Text and photo -->
+            <tr>
+              <td class="spacing-top right-title mWidth">
+                <h3>Section Title</h3>
+              </td>
+            </tr>
+            <tr>
+              <td class="spacing-top mWidth">
+                <table cellpadding="0" cellspacing="0" border="0" class="mWidth" align="left" width="125">
+                  <tr>
+                    <td class="mWidth">
+                      <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </td>
+                  </tr>
+                </table>
+                <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
+              </td>
+            </tr>
+            <!-- End text and phot -->
           </tbody>
         </table>
         <!-- END RIGHT COLUMN -->
