testing right-column background

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -32,11 +32,12 @@
 }
 
 .section-content .left-column {
-	border-right: 1px solid $brand-gold;
+	//border-right: 1px solid $brand-gold;
 	padding-right: 10px;
 }
 
 .section-content .right-column {
+	background: $white;
 	padding: 0;
 }
 
