--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -297,7 +297,7 @@
         </table>
         <!-- END LEFT COLUMN -->
         <!-- RIGHT COLUMN -->
-        <table align="right" border="0" cellpadding="0" cellspacing="0" width="215" class="mWidth">
+        <table align="right" border="0" bgcolor="#ffffff" cellpadding="0" cellspacing="0" width="225" class="mWidth">
           <tbody>
             <!-- Featured events -->
             <tr>
