--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -33,11 +33,11 @@
 
 .section-content .left-column {
 	//border-right: 1px solid $brand-gold;
-	padding-right: 10px;
+	padding-right: 0;
 }
 
 .section-content .right-column {
-	background: $white;
+	background: $light-gray;
 	padding: 5px;
 }
 
