adding right column new background color

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -37,8 +37,8 @@
 }
 
 .section-content .right-column {
-	background: $light-gray;
-	padding: 5px;
+	background: $right-column-background;
+	padding: 5px 5px 5px 10px;
 }
 
 .spacing-top {
