--- a/source/_assets/stylesheets/_variables.scss
+++ b/source/_assets/stylesheets/_variables.scss
@@ -21,6 +21,7 @@ $brand-blue: #00458c;
 $brand-gold: #ffc500;
 
 $background: #f2f5f8;
+$right-column-background: #ebf0f5;
 
 $dark-gray: #333;
 $light-gray: #bcc1c2;
