right column change background

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -297,7 +297,7 @@
         </table>
         <!-- END LEFT COLUMN -->
         <!-- RIGHT COLUMN -->
-        <table align="right" border="0" bgcolor="#f3f6f9" cellpadding="0" cellspacing="0" width="225" class="right-column mWidth">
+        <table align="right" border="0" bgcolor="#f5f8fa" cellpadding="0" cellspacing="0" width="225" class="right-column mWidth">
           <tbody>
             <!-- Featured events -->
             <tr>
