--- a/source/_assets/stylesheets/_variables.scss
+++ b/source/_assets/stylesheets/_variables.scss
@@ -21,7 +21,7 @@ $brand-blue: #00458c;
 $brand-gold: #ffc500;
 
 $background: #f2f5f8;
-$right-column-background: #f3f6f9;
+$right-column-background: #f5f8fa;
 
 $dark-gray: #333;
 $light-gray: #bcc1c2;
