right column padding

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -38,7 +38,7 @@
 
 .section-content .right-column {
 	background: $right-column-background;
-	padding: 5px;
+	padding: 5px 7px;
 }
 
 .spacing-top {
