right column border color change

--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -37,8 +37,8 @@
 }
 
 .section-content .right-column {
-	border-right: 1px solid $light-gray;
-	border-left: 1px solid $light-gray;
+	border-right: 1px solid $right-column-border;
+	border-left: 1px solid $right-column-border;
 	padding: 5px;
 }
 
