--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -33,12 +33,10 @@
 
 .section-content .left-column {
 	//border-right: 1px solid $brand-gold;
-	padding-right: 0;
+	padding-right: 10px;
 }
 
 .section-content .right-column {
-	border-right: 1px solid $right-column-border;
-	border-left: 1px solid $right-column-border;
 	padding: 5px;
 }
 
